k8s/list/list-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: list-deployment
  namespace: p-spring-list
  labels:
    app: list-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: list-product
  template:
    metadata:
      labels:
        app: list-product
    spec:
      nodeSelector:
        workload: list
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: list-container
          image: angiediazz/p-spring-list:latest
          ports:
            - containerPort: 8080
