k8s/list/list-service.yml
apiVersion: v1
kind: Service
metadata:
  name: list-service
  namespace: p-spring-list
  labels:
    app: list-product
spec:
  selector:
    app: list-product
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8080
  type: ClusterIP
