k8s/list/list-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: list-ingress
  namespace: p-spring-list
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /listar(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: list-service
                port:
                  number: 8083
